--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "cookiecutter>=2.6.0",
+    "cryptography>=46.0.5",
     "django>=5.2.10",
     "django-compressor>=4.6.0",
     "django-environ>=0.12.0",
@@ -18,6 +19,7 @@ dependencies = [
     "gitingest>=0.3.1",
     "pillow>=12.1.0",
     "pyinstaller>=6.17.0",
+    "pypdf>=6.7.0",
     "pyside6>=6.10.1",
     "wagtail>=7.2.1",
 ]
